# NTUcd

./: CMakeCache.txt  CMakeLists.txt  Makefile  NTUcd  README.md  cmake_install.cmake  rtl_simplify.v  run.sh
src/: RTL.cpp  RTL.h  Util.cpp  Util.h  main.cpp
testbench/: clk_up_counter.v  clk_up_counter_tran.v  gcd4bit.v  generate_sample.v  ncl_up_counter.v  rtl.v  rtl_simplify.v.  synth.v  tb_hand.v  tb_ncl_up_counter.v  up_counter.v
testbench/rtl/: boothmul32x32.v  clk_add32.v  clk_boothmul32x32.v  clk_cnt4fa.v  clk_divider.v  clk_fboundsp_1blk.v  clk_fboundsp_pipe.v  clk_mul8x8.v  clk_pipeadd3.v  clk_pipeadd3v2.v  clk_up_counter.v  clk_updnmod10.v  clkspec_alulp.v  clkspec_arbtst_2shared.v  clkspec_arbtst_4shared.v  clkspec_arbtst_client.v  clkspec_div32_16.v  clkspec_fifo.v  clkspec_forktst.v  clkspec_gcd16_16.v  clkspec_gcdsimple.v  clkspec_mod16_16.v  clkspec_ncr_mul8x8.v  clkspec_v2arbtst_2shared.v  clkspec_v2arbtst_4shared.v  clkspec_v2arbtst_client.v
